fix for overflow lags ios

--- a/css/vw.css
+++ b/css/vw.css
@@ -5,6 +5,8 @@ html,body
     margin: 0px;
     padding: 0px;
     -webkit-overflow-scrolling: touch;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .qrcode {
